# mltd-asset-downloader

./: .editorconfig  .eslintrc  .gitignore  .gitmodules  .prettierrc  Cargo.toml  LICENSE  README.ko-KR.md  README.md  README.zh-TW.md  build.rs  codemagic.yaml  deny.toml  package.json  rustfmt.toml  webpack.config.js
.cargo/: config-windows.toml  config.toml  windows-config.toml
.github/: FUNDING.yaml
.github/workflows/: build.yaml  check.yaml  fmt.yaml  lint.yaml  rust-check.yaml  test.yaml  workflow.yaml
acb/: .clang-format  Cargo.toml  build.rs
acb/src/: acb.cc  acb.h  lib.rs
acb/tests/: test.acb
cli/: Cargo.toml
cli/src/: main.rs  manifest.rs
core/: Cargo.toml
core/src/: lib.rs  utils.rs
crates/vgmstream/: Cargo.toml
crates/vgmstream-sys/: .gitignore  Cargo.toml  build.rs
crates/vgmstream-sys/src/: lib.rs
crates/vgmstream/src/: error.rs  lib.rs  sf.rs
download/: Cargo.toml
download/src/: error.rs  fetch.rs  lib.rs  manifest.rs
extract/: Cargo.toml
extract/src/: environment.rs  lib.rs  version.rs
extract/src/class/: acb.rs  asset_bundle.rs  mesh.rs  mod.rs  sprite.rs  text_asset.rs  texture_2d.rs
extract/src/utils/: audio.rs  image.rs  mod.rs  read_ext.rs
extract/tests/: test_text.unity3d
manifest/: Cargo.toml  README.md
manifest/src/: error.rs  format.rs  lib.rs  manifest.rs  matsuri_api.rs  os_variant.rs
src/: downloadAssets.js  getAssetList.js  getDownloadList.js  index.js  lib.rs  main.rs  utils.js  utils.rs
src/i18n/: en-US.json  ko-KR.json  zh-TW.json
src/mltd/: asset.rs  error.rs  lib.rs  manifest.rs  util.rs
src/mltd/extract/: audio.rs  environment.rs  mod.rs  puzzle.rs  text.rs  version.rs
src/mltd/extract/class/: asset_bundle.rs  mesh.rs  mod.rs  sprite.rs  text_asset.rs  texture_2d.rs
src/mltd/extract/utils/: audio.rs  mod.rs  puzzle.rs
src/mltd/net/: asset_ripper.rs  matsuri_api.rs  mod.rs
unity/: Cargo.toml  README.md
unity/src/: compression.rs  environment.rs  error.rs  lib.rs  macros.rs  traits.rs  utils.rs
unity/src/asset/: asset_type.rs  class.rs  class_info.rs  class_type.rs  header.rs  metadata.rs  mod.rs  object.rs  object_info.rs  object_reader.rs  platform.rs  serialized_type.rs  type_tree.rs
unity/src/asset_bundle/: flags.rs  header.rs  info_block.rs  mod.rs  unityfs.rs  version.rs
unity/src/bundle/: flags.rs  header.rs  info_block.rs  mod.rs  signature.rs  unityfs.rs  version.rs
unity/src/class/: animation_clip.rs  asset_bundle.rs  class_id_type.rs  editor_extension.rs  game_object.rs  mesh.rs  mod.rs  named_object.rs  object.rs  pptr.rs  sprite.rs  text_asset.rs  texture.rs  texture_2d.rs
unity/src/compression/: compressor.rs  method.rs  mod.rs
unity/src/error/: compression.rs  file.rs  mod.rs  unity.rs
unity/src/utils/: mod.rs  structs.rs  type_tree.rs  version.rs
unity/tests/: test.unity3d  test_sprite.unity3d
utils/: Cargo.toml
utils/src/: create_dir.rs  error_exit.rs  lib.rs  log.rs  log_formatter.rs  rand.rs  request.rs
