[workspace]
members = ["crates/vgmstream", "crates/vgmstream-sys"]

[workspace.package]
authors = ["我可能很廢"]
edition = "2024"
license = "MIT"
repository = "https://github.com/nicks96432/mltd-asset-downloader"

[package]
authors = { workspace = true }
build = "build.rs"
categories = ["command-line-utilities"]
description = "A CLI made for assets in THE iDOLM@STER® MILLION LIVE! THEATER DAYS (MLTD)"
edition = { workspace = true }
homepage = "https://github.com/nicks96432/mltd-asset-downloader"
keywords = ["downloader", "MLTD", "mirishita", "theaterdays", "unpack"]
license = { workspace = true }
name = "mltd"
readme = "README.md"
repository = { workspace = true }
version = "3.0.0-alpha.3"

[dependencies]
aes = { optional = true, version = "0.8.4" }
anyhow = { features = ["backtrace"], version = "1.0.98" }
bytes = { optional = true, version = "1.10.1" }
cbc = { optional = true, version = "0.1.2" }
cipher = { features = ["alloc", "block-padding"], optional = true, version = "0.4.4" }
clap = { features = ["color", "deprecated", "derive", "unicode", "wrap_help"], version = "4.5.40" }
clap-verbosity-flag = "3.0.3"
env_logger = { default-features = false, features = ["humantime"], version = "0.11.8" }
ffmpeg-next = { default-features = false, features = ["codec", "format", "software-resampling"], optional = true, version = "7.1.0" }
futures = "0.3.31"
glob = "0.3.2"
human_bytes = { default-features = false, optional = true, version = "0.4.3" }
image = { default-features = false, features = ["jpeg", "png", "webp", "serde"], optional = true, version = "0.25.6" }
indicatif = { default-features = false, version = "0.17.11" }
linked-hash-map = { features = ["serde_impl"], version = "0.5.6" }
log = "0.4.27"
num_cpus = { optional = true, version = "1.17.0" }
pbkdf2 = { features = ["sha1"], optional = true, version = "0.12.2" }
pin-project = "1.1.10"
regex = { default-features = false, features = ["perf", "std"], optional = true, version = "1.11.1" }
reqwest = { features = ["deflate", "gzip", "json", "stream", "zstd"], version = "0.12.20" }
rmp-serde = "1.3.0"
scraper = { optional = true, version = "0.23.1" }
serde = { features = ["derive"], version = "1.0.219" }
serde_json = { optional = true, version = "1.0.140" }
sha1 = { optional = true, version = "0.10.6" }
tempfile = { optional = true, version = "3.20.0" }
thiserror = "2.0.12"
tokio = { features = ["macros", "process", "rt-multi-thread"], version = "1.45.1" }
tokio-util = { features = ["compat"], version = "0.7.15" }
vgmstream = { optional = true, path = "crates/vgmstream" }
zip = { default-features = false, features = ["deflate"], optional = true, version = "4.1.0" }

[build-dependencies]
vergen = { features = ["cargo", "emit_and_set", "rustc"], version = "9.0.6" }
vergen-gitcl = { version = "1.0.8" }

[dev-dependencies]
ctor = "0.4.2"
tokio-test = "0.4.4"

[lib]
name = "mltd"
path = "src/mltd/lib.rs"

[[bin]]
name = "mltd"
test = false
doc = false

[profile.release]
codegen-units = 20
lto = "thin"
panic = "abort"
strip = true

[profile.dev]
split-debuginfo = "unpacked"

[features]
default = ["download", "extract"]
debug = []
download = ["dep:human_bytes", "dep:num_cpus"]
extract = [
    "dep:aes",
    "dep:bytes",
    "dep:cbc",
    "dep:cipher",
    "dep:ffmpeg-next",
    "dep:image",
    "dep:regex",
    "dep:num_cpus",
    "dep:pbkdf2",
    "dep:scraper",
    "dep:sha1",
    "dep:serde_json",
    "dep:tempfile",
    "dep:vgmstream",
    "dep:zip"
]
cipher = []
