[package]
authors.workspace = true
build = "build.rs"
description = "Rust bindings for libcgss"
edition.workspace = true
name = "acb"
license.workspace = true
repository.workspace = true
version = "0.1.0"

[dependencies]
cxx = "1.0.100"

[build-dependencies]
cmake = "0.1.50"

[build-dependencies.cxx-build]
features = ["parallel"]
version = "1.0.100"

[features]
default = []
debug = []
