[package]
authors = { workspace = true }
build = "build.rs"
description = "Rust bindings for libcgss"
edition = { workspace = true }
name = "acb"
license = { workspace = true }
repository = { workspace = true }
version = "2.0.1"

[dependencies]
cxx = "1.0.136"

[build-dependencies]
cmake = "0.1.52"

[build-dependencies.cxx-build]
features = ["parallel"]
version = "1.0.136"

[features]
default = []
debug = []
