[package]
authors.workspace = true
categories = ["command-line-utilities"]
description = "A CLI made for assets in THE iDOLM@STER® MILLION LIVE! THEATER DAYS (MLTD)"
edition.workspace = true
homepage = "https://github.com/nicks96432/mltd-asset-downloader"
keywords = ["downloader", "MLTD", "mirishita", "theaterdays", "unpack"]
license.workspace = true
name = "mltd"
readme = "README.md"
repository.workspace = true
version = "2.0.0-beta.4"

[dependencies]
clap = { workspace = true }
clap-verbosity-flag = "2.1.1"
env_logger = { workspace = true }
log = { workspace = true }
mltd-utils = { path = "../utils" }
rayon = { workspace = true }

[dependencies.mltd-asset-download]
optional = true
path = "../download"

[dependencies.mltd-asset-extract]
optional = true
path = "../extract"

[dependencies.mltd-asset-manifest]
optional = true
path = "../manifest"

[features]
default = ["download", "extract", "manifest"]
download = ["mltd-asset-download"]
debug = ["download", "mltd-asset-download/debug"]
extract = ["dep:mltd-asset-extract"]
manifest = ["dep:mltd-asset-manifest"]
