[package]
authors = { workspace = true }
categories = ["command-line-utilities"]
description = "A CLI made for assets in THE iDOLM@STER® MILLION LIVE! THEATER DAYS (MLTD)"
edition = { workspace = true }
homepage = "https://github.com/nicks96432/mltd-asset-downloader"
keywords = ["downloader", "MLTD", "mirishita", "theaterdays", "unpack"]
license = { workspace = true }
name = "mltd"
readme = "README.md"
repository = { workspace = true }
version = "2.0.0"

[dependencies]
clap-verbosity-flag = "3.0.1"
env_logger = { workspace = true }
log = { workspace = true }
mltd-utils = { path = "../utils" }
rayon = { workspace = true }

[dependencies.clap]
features = ["std", "help", "usage", "derive"]
workspace = true

[dependencies.mltd-asset-download]
optional = true
path = "../download"

[dependencies.mltd-asset-extract]
optional = true
path = "../extract"

[dependencies.mltd-asset-manifest]
optional = true
path = "../manifest"

[features]
default = ["download", "extract", "manifest"]
debug = ["mltd-asset-download/debug", "mltd-asset-extract/debug"]
download = ["dep:mltd-asset-download"]
extract = ["dep:mltd-asset-extract"]
manifest = ["dep:mltd-asset-manifest"]
