[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "mltd-core"
repository.workspace = true
version = "0.1.0"

[dependencies]
clap = { features = ["derive"], default-features = false, workspace = true }
env_logger = { workspace = true }
log = { workspace = true }

[dependencies.serde]
features = ["derive"]
version = "1.0.152"
