[package]
authors = { workspace = true }
description = "Download assets from MLTD asset server"
edition = { workspace = true }
license = { workspace = true }
name = "mltd-asset-download"
repository = { workspace = true }
version = "0.1.0"

[dependencies]
indicatif = { workspace = true }
log = { workspace = true }
num_cpus = { workspace = true }
rayon = { workspace = true }
ureq = { workspace = true }

[dependencies.clap]
features = ["deprecated", "derive"]
workspace = true

[dependencies.mltd-asset-manifest]
path = "../manifest"

[dependencies.mltd-utils]
default-features = false
features = ["request"]
path = "../utils"

[dependencies.serde]
features = ["derive"]
workspace = true

[features]
debug = []
