[package]
authors = { workspace = true }
description = "Extract media from MLTD assets"
edition = { workspace = true }
license = { workspace = true }
name = "mltd-asset-extract"
repository = { workspace = true }
version = "0.1.0"

[dependencies]
# For decoding ACB audio
acb = { path = "../acb" }

# For text asset decryption
aes = "0.8.4"
cbc = "0.1.2"

# For reading numbers from binary data
byteorder = "1.5.0"

indicatif = { workspace = true }
log = { workspace = true }
num-derive = "0.4.2"
num-traits = "0.2.19"
num_cpus = { workspace = true }

# For unpacking unity assets
rabex = "0.0.3"

rayon = { workspace = true }

# For decoding Texture2D
texture2ddecoder = "0.1.1"

[dependencies.clap]
features = ["deprecated", "derive"]
workspace = true

# For image encoding
[dependencies.image]
features = ["png"]
default-features = false
version = "0.25.5"

# For regex matching in texture name
[dependencies.lazy-regex]
default-features = false
features = ["std", "perf"]
version = "3.3.0"

[dev-dependencies]
ctor = { workspace = true }
env_logger = { workspace = true }

[dev-dependencies.mltd-utils]
features = ["log", "rand"]
path = "../utils"

[features]
debug = []
