[package]
authors = { workspace = true }
description = "MLTD asset manifest related tools"
edition = { workspace = true }
license = { workspace = true }
name = "mltd-asset-manifest"
repository = { workspace = true }
version = "2.0.0"

[dependencies]
log = { workspace = true }
rmp-serde = "1.3.0"
thiserror = "2.0.4"
ureq = { workspace = true }

[dependencies.clap]
features = ["derive"]
workspace = true

[dependencies.human_bytes]
default-features = false
version = "0.4.3"

[dependencies.linked-hash-map]
features = ["serde_impl"]
workspace = true

[dependencies.mltd-utils]
features = ["log", "request"]
path = "../utils"

[dependencies.serde]
features = ["derive"]
workspace = true

[dev-dependencies]
ctor = { workspace = true }
env_logger = { workspace = true }
