[package]
authors.workspace = true
description = "A library to parse unity asset bundles"
edition.workspace = true
name = "unity"
license.workspace = true
repository.workspace = true
version = "0.1.0"

[dependencies]
byteorder = "1.4.3"
env_logger = { workspace = true }
log = { workspace = true }

[dependencies.lz4_flex]
default-features = false
features = ["checked-decode"]
optional = true
version = "0.10.0"

[dependencies.lzham]
features = ["static"]
optional = true
version = "0.1.1"

[dependencies.xz2]
optional = true
version = "0.1.7"

[dev-dependencies.ctor]
version = "0.1.26"

[dev-dependencies.mltd-utils]
features = ["log", "rand"]
path = "../utils"

[features]
default = ["lz4"]
lz4 = ["dep:lz4_flex"]
lzma = ["dep:xz2"]
lzham = ["dep:lzham"]
