[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "mltd-utils"
repository.workspace = true
version = "0.1.0"

[dependencies.env_logger]
optional = true
workspace = true

[dependencies.log]
optional = true
workspace = true

[dependencies.rand]
default-features = false
version = "0.8.5"
optional = true

[dependencies.rand_xoshiro]
version = "0.6.0"
optional = true

[dependencies.ureq]
optional = true
workspace = true

[features]
default = []
log = ["dep:log", "dep:env_logger"]
rand = ["rand/std", "rand/std_rng", "dep:rand_xoshiro"]
request = ["dep:ureq"]
