[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
links = "vgmstream"
name = "vgmstream-sys"
repository.workspace = true
version = "0.2.0-vgmstream-r2023-27-g7b0c835c"

[build-dependencies]
bindgen = "0.72.0"
cmake = "0.1.54"

[features]
default = []
atrac9 = []
celt = []
ffmpeg = []
g719 = []
g7221 = []
mpeg = []
speex = []
static = []
vorbis = []
